2003-03-04  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - got rid of some framework initialization (working on bug 3185161)

        * WebView.subproj/WebPreferences.m:
        (-[WebPreferences _postPreferencesChangesNotification]): Moved this function up.
        (+[WebPreferences standardPreferences]): Call _postPreferencesChangesNotification when this is made,
        for consistency with the old behavior.
        (+[WebPreferences initialize]): Changed to initialize from load, and got rid of stuff we don't want
        to do from inside an initialize function.

2003-03-04  Richard Williamson   <rjw@apple.com>

        Remove initWithURL: and frameName from WebDataSource public API.
        
        Reviewed by trey.

        * WebView.subproj/WebDataSource.h:
        * WebView.subproj/WebDataSource.m:
        (-[WebDataSource webFrame]):

2003-03-04  Darin Adler  <darin@apple.com>

        * English.lproj/StringsNotToBeLocalized.txt: Updated for recent changes.
        * English.lproj/Localizable.strings: Regenerated.

2003-03-03  Richard Williamson   <rjw@apple.com>

        Switch all WebController's delegate to use informal protocols.
        
        Reviewed by trey.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView status:]):
        * Plugins.subproj/WebNetscapePluginDocumentView.m:
        (-[WebNetscapePluginDocumentView setDataSource:]):
        * Plugins.subproj/WebNullPluginView.m:
        (-[WebNullPluginView viewDidMoveToWindow]):
        * Plugins.subproj/WebPluginController.m:
        (-[WebPluginController showStatus:]):
        * WebCoreSupport.subproj/WebBridge.h:
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge createWindowWithURL:frameName:]):
        (-[WebBridge showWindow]):
        (-[WebBridge areToolbarsVisible]):
        (-[WebBridge setToolbarsVisible:]):
        (-[WebBridge isStatusBarVisible]):
        (-[WebBridge setStatusBarVisible:]):